# aRibeiroCore

./: CMakeLists.txt  LICENSE  README.md
cmake/: 01_tools.cmake
cmake-modules/: FindaRibeiroCore.cmake
docs/: how-to-build.md  index.md
docs/aRibeiroCore/: feature-color-conversion.md  feature-easing-eq.md  feature-math-collision.md  feature-math.md  feature-method-delegation.md  feature-press-release-detector.md  feature-properties.md  feature-random-generator.md  feature-set-null-and-delete.md  feature-string-util.md  feature-transform-stack.md
src/: aRibeiroCore.h.in  buildFlags.h.in  common.cpp  common.h
src/core/: Algorithms.cpp  Algorithms.h  ColorConversion.cpp  ColorConversion.h  DebugConsoleIPC.h  Delegate.h  DynamicMatrix.h  GetFirstMacAddress.h  MethodPointer.h  PressReleaseDetector.cpp  PressReleaseDetector.h  Property.h  Random.cpp  Random.h  RunLengthEncoding.cpp  RunLengthEncoding.h  SSE2.cpp  SSE2.h  SetNullAndDelete.h  StringUtil.cpp  StringUtil.h  TransformStack.h  VirtualProperty.h
src/math/: BresenhamIterator.h  EasingEquations.h  all_math.h  constants.h  floatOPs.h  geometricOperations.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
src/math/collision/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  LineSegment.cpp  LineSegment.h  OBB.cpp  OBB.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
